Drop event listener. Fix board crash if the main extension's became unavailable.

--- a/config/services.yml
+++ b/config/services.yml
@@ -2,19 +2,6 @@ imports:
     - { resource: tables.yml }
 
 services:
-    alg.AddonForThanksForPosts.listener:
-        class: alg\AddonForThanksForPosts\event\listener
-        arguments:
-            - @config
-            - @dbal.conn
-            - @auth
-            - @template
-            - @user
-            - @cache.driver
-            - %core.root_path%
-            - %core.php_ext%
-        tags:
-            - { name: event.listener }
     alg.AddonForThanksForPosts.thanks_ajax_handler:
         class: alg\AddonForThanksForPosts\controller\thanks_ajax_handler
         arguments:
@@ -28,7 +15,7 @@ services:
             - %core.php_ext%
             - @request
             - %core.table_prefix%
-            - @gfksx.ThanksForPosts.helper
             - %tables.thanks%
             - %tables.users%
             - %tables.posts%
+            - @?gfksx.ThanksForPosts.helper
