--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,9 @@
     "name": "alg/AddonForThanksForPosts",
     "type": "phpbb-extension",
     "description": "Adds ajax functionality to main extension to update result of set/delete likes without reloading the page",
-    "homepage": "https://github.com/alg5/AddonForThanksForPosts",
-    "version": "2.0.5",
-    "time": "2016-04-04",
+    "homepage": "https://github.com/alg5/AddonForThanksForPosts/tree/dev_3.2.x",
+    "version": "3.0.0",
+    "time": "2016-04-05",
     "license": "GPL-2.0",
     "authors": [
         {
@@ -23,7 +23,7 @@
 	"extra": {
         "display-name": "Addon for Thanks for posts",
         "soft-require": {
-           "phpbb/phpbb": "3.1.*@dev"
+           "phpbb/phpbb": "3.2.*@dev"
         },
         "version-check": {
             "host": "alg5.github.io",
