--- a/config/services.yml
+++ b/config/services.yml
@@ -2,6 +2,13 @@ imports:
     - { resource: tables.yml }
 
 services:
+    alg.AddonForThanksForPosts.listener:
+        class: alg\AddonForThanksForPosts\event\listener
+        arguments:
+            - @template
+            - %core.root_path%
+        tags:
+            - { name: event.listener }
     alg.AddonForThanksForPosts.thanks_ajax_handler:
         class: alg\AddonForThanksForPosts\controller\thanks_ajax_handler
         arguments:
