--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+sudo: required
+
 language: php
 
 matrix:
@@ -20,10 +22,13 @@ matrix:
       env: DB=mysqli
     - php: 5.6
       env: DB=mysqli
+    - php: 7.0
+      env: DB=mysqli
     - php: hhvm
       env: DB=mysqli
   allow_failures:
-    - php: hhvm
+     - php: 7.0
+   - php: hhvm
   fast_finish: true
 
 env:
@@ -37,8 +42,7 @@ env:
 branches:
   only:
     - master
-    - develop
-    - /^develop-.*$/
+    - /^(3\.[1-9]|[4-9]\.\d)\.x$/
 
 before_install:
   - sudo mkdir travis
