--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
-sudo: required
-
 language: php
 
 matrix:
@@ -22,13 +20,10 @@ matrix:
       env: DB=mysqli
     - php: 5.6
       env: DB=mysqli
-    - php: 7.0
-      env: DB=mysqli
     - php: hhvm
       env: DB=mysqli
   allow_failures:
-     - php: 7.0
-   - php: hhvm
+    - php: hhvm
   fast_finish: true
 
 env:
@@ -42,7 +37,8 @@ env:
 branches:
   only:
     - master
-    - /^(3\.[1-9]|[4-9]\.\d)\.x$/
+    - develop
+    - /^develop-.*$/
 
 before_install:
   - sudo mkdir travis
