--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+sudo: required
+
 language: php
 
 matrix:
@@ -25,6 +27,7 @@ matrix:
   allow_failures:
     - php: hhvm
   fast_finish: true
+
 
 env:
   global:
