team validation requirements

--- a/config/services.yml
+++ b/config/services.yml
@@ -2,28 +2,24 @@ imports:
     - { resource: tables.yml }
 
 services:
-    alg.AddonForThanksForPosts.listener:
-        class: alg\AddonForThanksForPosts\event\listener
+    alg.addonforthanksforposts.listener:
+        class: alg\addonforthanksforposts\event\listener
         arguments:
             - @template
-            - %core.root_path%
+            - @controller.helper
         tags:
             - { name: event.listener }
-    alg.AddonForThanksForPosts.thanks_ajax_handler:
-        class: alg\AddonForThanksForPosts\controller\thanks_ajax_handler
+    alg.addonforthanksforposts.thanks_ajax_handler:
+        class: alg\addonforthanksforposts\controller\thanks_ajax_handler
         arguments:
             - @config
             - @dbal.conn
             - @auth
-            - @template
             - @user
-            - @cache.driver
             - %core.root_path%
             - %core.php_ext%
-            - @request
-            - %core.table_prefix%
+            - @controller.helper
             - %tables.thanks%
             - %tables.users%
             - %tables.posts%
-            - @controller.helper
             - @?gfksx.ThanksForPosts.helper
