--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,9 @@
     "name": "alg/addonforthanksforposts",
     "type": "phpbb-extension",
     "description": "Adds ajax functionality to main extension to update result of set/delete likes without reloading the page",
-    "homepage": "https://github.com/alg5/addonforthanksforposts/tree/dev_3.2.x",
-    "version": "3.0.5",
-    "time": "2017-06-11",
+    "homepage": "https://github.com/alg5/addonforthanksforposts",
+    "version": "3.0.6",
+    "time": "2018-03-24",
     "license": "GPL-2.0",
     "authors": [
         {
