--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ matrix:
     - php: nightly
       env: PHPBB_BRANCH="master";DB=mysqli
   allow_failures:
-    - php: nightly
+    - env: PHPBB_BRANCH="master";DB=mysqli
   fast_finish: true
 
 env:
@@ -42,13 +42,13 @@ env:
     - SNIFF="1"            # Should we run code sniffer on your code?
     - IMAGE_ICC="1"        # Should we run icc profile sniffer on your images?
     - EPV="1"              # Should we run EPV (Extension Pre Validator) on your code?
-    - PHPBB_BRANCH="dev_3.2.x"
+    - PHPBB_BRANCH="3.2.x"
 
 branches:
   only:
     - master
-    - develop
-    - /^develop-.*$/
+    - dev
+    - /^dev_.*$/
     - /^.*_prep$/
     - /^\d+(\.\d+)?\.x$/
 
