--- a/config/services.yml
+++ b/config/services.yml
@@ -5,21 +5,21 @@ services:
     alg.addonforthanksforposts.listener:
         class: alg\addonforthanksforposts\event\listener
         arguments:
-            - @template
-            - @controller.helper
+            - '@template'
+            - '@controller.helper'
         tags:
             - { name: event.listener }
     alg.addonforthanksforposts.thanks_ajax_handler:
         class: alg\addonforthanksforposts\controller\thanks_ajax_handler
         arguments:
-            - @config
-            - @dbal.conn
-            - @auth
-            - @user
-            - %core.root_path%
-            - %core.php_ext%
-            - @controller.helper
-            - %tables.thanks%
-            - %tables.users%
-            - %tables.posts%
-            - @?gfksx.thanksforposts.helper
+            - '@config'
+            - '@dbal.conn'
+            - '@auth'
+            - '@user'
+            - '%core.root_path%'
+            - '%core.php_ext%'
+            - '@controller.helper'
+            - '%tables.thanks%'
+            - '%tables.users%'
+            - '%tables.posts%'
+            - '@?gfksx.thanksforposts.helper'
