--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,5 @@
-# Opt into fully virtualized infrastructure
-sudo: required
-dist: xenial
-
 language: php
+dist: trusty
 
 matrix:
   include:
@@ -19,20 +16,25 @@ matrix:
     - php: 5.4
       env: DB=sqlite3
     - php: 5.5
-      env: DB=mysqliô
+      env: DB=mysqli
     - php: 5.6
       env: DB=mysqli
     - php: 7.0
       env: DB=mysqli
     - php: 7.1
       env: DB=mysqli
+    - php: 7.2
+      env: DB=mysqli
+    - php: 7.2
+      env: PHPBB_BRANCH="master";DB=mysqli
+    - php: 7.3
+      env: PHPBB_BRANCH="3.3.x";DB=mysqli
+    - php: 7.3
+      env: PHPBB_BRANCH="master";DB=mysqli
     - php: nightly
-      env: DB=mysqli
-    - php: hhvm
-      env: DB=mysqli
+      env: PHPBB_BRANCH="master";DB=mysqli
   allow_failures:
     - php: nightly
-    - php: hhvmdis
   fast_finish: true
 
 env:
@@ -43,10 +45,12 @@ env:
     - EPV="1"              # Should we run EPV (Extension Pre Validator) on your code?
     - PHPBB_BRANCH="3.2.x"
 
+branches:
   only:
     - master
     - develop
     - /^develop-.*$/
+    - /^.*_prep$/
     - /^\d+(\.\d+)?\.x$/
 
 before_install:
