Fix style and new event

--- a/config/services.yml
+++ b/config/services.yml
@@ -21,6 +21,7 @@ services:
             - '%core.root_path%'
             - '%core.php_ext%'
             - '@controller.helper'
+            - '@dispatcher'
             - '%tables.thanks%'
             - '%tables.users%'
             - '%tables.posts%'
